// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intro Screen renders 1`] = `
<Modal
  transparent={false}
  visible={true}
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        onLayout={[Function]}
        style={
          [
            {
              "flex": undefined,
              "overflow": "hidden",
            },
            {
              "flex": 1,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <RCTScrollView
          bounces={false}
          collapsable={false}
          horizontal={true}
          importantForAccessibility="no"
          initialScrollIndex={0}
          keyExtractor={[Function]}
          maintainVisibleContentPosition={
            {
              "minIndexForVisible": 0,
            }
          }
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          pagingEnabled={true}
          scrollEventThrottle={50}
          showsHorizontalScrollIndicator={false}
          testID="intro-screen-notch-test"
        >
          <View>
            <View
              style={
                {
                  "height": 0,
                  "left": 1000000,
                  "position": "absolute",
                  "top": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": undefined,
                  "marginTop": undefined,
                  "width": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": 0,
                  "marginLeft": 0,
                  "marginTop": undefined,
                  "opacity": 1,
                  "width": 0,
                }
              }
            >
              <View
                index={0}
                onLayout={[Function]}
                style={
                  {
                    "flexDirection": "row",
                    "height": undefined,
                    "left": 0,
                    "maxHeight": undefined,
                    "maxWidth": undefined,
                    "minHeight": undefined,
                    "minWidth": undefined,
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "width": undefined,
                  }
                }
              >
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    {
                      "height": 0,
                      "width": 0,
                    }
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "bottom": 22,
              "justifyContent": "space-between",
              "left": 0,
              "position": "absolute",
              "right": 0,
            },
            {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              {
                "width": 0,
              },
            ]
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 12,
              },
              {
                "width": 0,
              },
            ]
          }
          testID="intro-screen-notch-test$buttonDone"
        >
          <View
            style={
              {
                "alignSelf": "center",
              }
            }
          >
            <View
              testId="icon"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Intro Screen renders with 1 bottom button 1`] = `
<Modal
  transparent={false}
  visible={true}
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        onLayout={[Function]}
        style={
          [
            {
              "flex": undefined,
              "overflow": "hidden",
            },
            {
              "flex": 1,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <RCTScrollView
          bounces={false}
          collapsable={false}
          horizontal={true}
          importantForAccessibility="no"
          initialScrollIndex={0}
          keyExtractor={[Function]}
          maintainVisibleContentPosition={
            {
              "minIndexForVisible": 0,
            }
          }
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          pagingEnabled={true}
          scrollEventThrottle={50}
          showsHorizontalScrollIndicator={false}
          testID="intro-screen-notch-test"
        >
          <View>
            <View
              style={
                {
                  "height": 0,
                  "left": 1000000,
                  "position": "absolute",
                  "top": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": undefined,
                  "marginTop": undefined,
                  "width": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": 0,
                  "marginLeft": 0,
                  "marginTop": undefined,
                  "opacity": 1,
                  "width": 0,
                }
              }
            >
              <View
                index={0}
                onLayout={[Function]}
                style={
                  {
                    "flexDirection": "row",
                    "height": undefined,
                    "left": 0,
                    "maxHeight": undefined,
                    "maxWidth": undefined,
                    "minHeight": undefined,
                    "minWidth": undefined,
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "width": undefined,
                  }
                }
              >
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    {
                      "height": 0,
                      "width": 0,
                    }
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "bottom": 22,
              "justifyContent": "space-between",
              "left": 0,
              "position": "absolute",
              "right": 0,
            },
            {},
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              {
                "width": "100%",
              },
            ]
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 16,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 12,
                  },
                  {},
                ]
              }
              testID="intro-screen-notch-test$buttonDone"
            >
              <View
                style={
                  {
                    "alignSelf": "center",
                  }
                }
              >
                <View
                  testId="icon"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Intro Screen renders with 2 bottom button 1`] = `
<Modal
  transparent={false}
  visible={true}
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        onLayout={[Function]}
        style={
          [
            {
              "flex": undefined,
              "overflow": "hidden",
            },
            {
              "flex": 1,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <RCTScrollView
          bounces={false}
          collapsable={false}
          horizontal={true}
          importantForAccessibility="no"
          initialScrollIndex={0}
          keyExtractor={[Function]}
          maintainVisibleContentPosition={
            {
              "minIndexForVisible": 0,
            }
          }
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          pagingEnabled={true}
          scrollEventThrottle={50}
          showsHorizontalScrollIndicator={false}
          testID="intro-screen-notch-test"
        >
          <View>
            <View
              style={
                {
                  "height": 0,
                  "left": 1000000,
                  "position": "absolute",
                  "top": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": undefined,
                  "marginTop": undefined,
                  "width": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": 0,
                  "marginLeft": 0,
                  "marginTop": undefined,
                  "opacity": 1,
                  "width": 0,
                }
              }
            >
              <View
                index={0}
                onLayout={[Function]}
                style={
                  {
                    "flexDirection": "row",
                    "height": undefined,
                    "left": 0,
                    "maxHeight": undefined,
                    "maxWidth": undefined,
                    "minHeight": undefined,
                    "minWidth": undefined,
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "width": undefined,
                  }
                }
              >
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    {
                      "height": 0,
                      "width": 0,
                    }
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "bottom": 22,
              "justifyContent": "space-between",
              "left": 0,
              "position": "absolute",
              "right": 0,
            },
            {},
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              {
                "width": "100%",
              },
            ]
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 16,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 12,
                  },
                  {},
                ]
              }
              testID="intro-screen-notch-test$buttonDone"
            >
              <View
                style={
                  {
                    "alignSelf": "center",
                  }
                }
              >
                <View
                  testId="icon"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Intro Screen renders with active slide attribute 1`] = `
<Modal
  transparent={false}
  visible={true}
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        onLayout={[Function]}
        style={
          [
            {
              "flex": undefined,
              "overflow": "hidden",
            },
            {
              "flex": 1,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <RCTScrollView
          bounces={false}
          collapsable={false}
          horizontal={true}
          importantForAccessibility="no"
          initialScrollIndex={0}
          keyExtractor={[Function]}
          maintainVisibleContentPosition={
            {
              "minIndexForVisible": 0,
            }
          }
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          pagingEnabled={true}
          scrollEventThrottle={50}
          showsHorizontalScrollIndicator={false}
          testID="intro-screen-notch-test"
        >
          <View>
            <View
              style={
                {
                  "height": 0,
                  "left": 1000000,
                  "position": "absolute",
                  "top": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": undefined,
                  "marginTop": undefined,
                  "width": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": 0,
                  "marginLeft": 0,
                  "marginTop": undefined,
                  "opacity": 1,
                  "width": 0,
                }
              }
            >
              <View
                index={0}
                onLayout={[Function]}
                style={
                  {
                    "flexDirection": "row",
                    "height": undefined,
                    "left": 0,
                    "maxHeight": undefined,
                    "maxWidth": undefined,
                    "minHeight": undefined,
                    "minWidth": undefined,
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "width": undefined,
                  }
                }
              >
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    {
                      "height": 0,
                      "width": 0,
                    }
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "bottom": 22,
              "justifyContent": "space-between",
              "left": 0,
              "position": "absolute",
              "right": 0,
            },
            {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              {
                "width": 0,
              },
            ]
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 12,
              },
              {
                "width": 0,
              },
            ]
          }
          testID="intro-screen-notch-test$buttonDone"
        >
          <View
            style={
              {
                "alignSelf": "center",
              }
            }
          >
            <View
              testId="icon"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Intro Screen renders with async storage identifier 1`] = `
<Modal
  transparent={false}
  visible={true}
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        onLayout={[Function]}
        style={
          [
            {
              "flex": undefined,
              "overflow": "hidden",
            },
            {
              "flex": 1,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <RCTScrollView
          bounces={false}
          collapsable={false}
          horizontal={true}
          importantForAccessibility="no"
          initialScrollIndex={0}
          keyExtractor={[Function]}
          maintainVisibleContentPosition={
            {
              "minIndexForVisible": 0,
            }
          }
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          pagingEnabled={true}
          scrollEventThrottle={50}
          showsHorizontalScrollIndicator={false}
          testID="intro-screen-notch-test"
        >
          <View>
            <View
              style={
                {
                  "height": 0,
                  "left": 1000000,
                  "position": "absolute",
                  "top": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": undefined,
                  "marginTop": undefined,
                  "width": 0,
                }
              }
            />
            <View
              style={
                {
                  "height": 0,
                  "marginLeft": 0,
                  "marginTop": undefined,
                  "opacity": 1,
                  "width": 0,
                }
              }
            >
              <View
                index={0}
                onLayout={[Function]}
                style={
                  {
                    "flexDirection": "row",
                    "height": undefined,
                    "left": 0,
                    "maxHeight": undefined,
                    "maxWidth": undefined,
                    "minHeight": undefined,
                    "minWidth": undefined,
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "width": undefined,
                  }
                }
              >
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    {
                      "height": 0,
                      "width": 0,
                    }
                  }
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "bottom": 22,
              "justifyContent": "space-between",
              "left": 0,
              "position": "absolute",
              "right": 0,
            },
            {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              {
                "width": 0,
              },
            ]
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 12,
              },
              {
                "width": 0,
              },
            ]
          }
          testID="intro-screen-notch-test$buttonDone"
        >
          <View
            style={
              {
                "alignSelf": "center",
              }
            }
          >
            <View
              testId="icon"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
